# cashu-wallet-rs

./: .gitignore  Cargo.toml  LICENSE.txt  readme.md
cashu-wallet/: Cargo.toml
cashu-wallet/src/: lib.rs  types.rs  unity.rs
cashu-wallet/src/store/: impl_redb.rs  mod.rs
cashu-wallet/src/wallet/: client.rs  counter.rs  error.rs  mod.rs  token.rs
store-sqlite/: .env  Cargo.toml  readme.md
store-sqlite/migrations/: 20230919031000_cashu.sql  20240519103947_cashu-apiv1.sql  20240519114234_cashu-counters.sql
store-sqlite/src/: lib.rs
test-cashu/: Cargo.toml
test-cashu/src/: main.rs
wallet-cli/: Cargo.toml
wallet-cli/src/: fix.rs  main.rs  melt.rs  mint.rs  opts.rs  recv.rs  restore.rs  send.rs  show.rs
