[package]
edition = "2021"
name = "cashu-wallet"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[features]
# default = []

# [dev-dependencies]
[dependencies]
anyhow = "1" 
base64 = "0.22" # cdk say bitcoin uses v0.22
hex = "0.4" 
lazy_static = "1" 
log = "0.4" 
serde = {version = "1", features = ["derive"]} 
serde_json = "1" 
strum = {version = "0.25", features = ["derive"]} 
thiserror = "1" 
#
async-trait = "0.1.73"
reqwest = {version = "0.11.20", features =["serde_json", "json", "rustls-tls", "gzip"], default-features = false}
tokio = {version = "1.28.1", features = ["sync", "rt", "macros"]}
url = {version = "2.4.0", features = ["serde"]}
# 
bitcoin_hashes = "0.12.0"
# lightning-invoice = { version = "0.24.0", features=["serde"] }
#
ciborium = { version = "0.2.2", default-features = false, features = ["std"] }
bip39 = {version = "2.0", features = ["rand"]}
bitcoin = {version = "0.30", features = ["serde", "rand", "rand-std"]}
cashu = {package = "cdk", default-features = false, features = [], git = "https://github.com/keychat-io/cdk", branch = "public-000301"}
# cashu = {package = "cdk", default-features = false, features = [], path = "../../cdk/crates/cdk"}
# test
rand = "0.8"
tempfile = "3"
