[package]
edition = "2021"
name = "cashu-wallet-sqlite"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
cashu-wallet = {path = "../cashu-wallet"}
sqlx = {version = "0.7.1", features = ["runtime-tokio", "sqlite"]}
tokio = {version = "1.28.1", features = ["sync", "rt", "macros"]}
futures-util = "0.3"
# 
anyhow = "1"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
strum = {version = "0.25", features = ["derive"]}
thiserror = "1"
