[package]
edition = "2021"
name = "wallet-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashu-wallet = {features = [], path = "../cashu-wallet"}
cashu-wallet-sqlite = {path = "../store-sqlite"}
tokio = {version = "1.28.1", features = ["sync", "rt", "macros", "rt-multi-thread"]}
# 
anyhow = "1"
clap = {version = "4.4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
base64 = "0.22"
# 
tracing = "0.1"
tracing-subscriber = "0.3"
